fix navbar scrollbar

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -81,6 +81,10 @@ li {
   padding: 10px;
   background-color: teal;
   color: #fff;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  overflow: hidden;
  }
  .nav-links a {
   color: #fff;
